<resources>
    <string name="app_name">VIAJELP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="registrarse">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Home</string>
    <string name="entrar">Entrar</string>
    <string name="registrate">Registrate</string>
    <string name="idioma">Ingles</string>
    <string name="mensajeApp">Viaja y aprende</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="sesionCerrada">Sesion cerrada</string>
    <string name="repetirPassword">Repetir Password</string>
    <string name="passwordDebeCoicidir">Passwords deben coincidir</string>
    <string name="usuarioRequerido">Usuario requerido</string>
    <string name="passwordRequerido">Password requerido</string>
    <string name="rellenaTodosLosCampos">Rellena todos los campos</string>
    <string name="queEmpieceElViaje">QUE EMPIECE EL VIAJE</string>
    <string name="hola">Hola</string>
    <string name="situaciones">SITUACIONES</string>
    <string name="aprendeme">APRENDEME</string>
    <string name="foro">FORO</string>
    <string name="pregutaAlForo">Escribe al foro</string>
    <string name="preguntar">Preguntar</string>
    <string name="fraseEnviada">Frase envida</string>
    <string name="contestaAlForo">Contesta al foro</string>
    <string name="usuarioYaexiste">Usuario ya existe</string>
    <string name="responder">Enviar respuesta</string>
    <string name="grabarAudio">Grabar Audio</string>
    <string name="reproducir">Escuchar respuesta</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="aeropuerto">AEROPUERTO</string>
    <string name="hotel">HOTEL</string>
    <string name="bar">BAR</string>
    <string name="comida">COMIDA</string>
    <string name="salud">SALUD</string>
    <string name="ubicacion">UBICACION</string>
    <string name="transporte">TRANSPORTE PUBLICO</string>
    <string name="estudios">ESTUDIOS</string>
    <string name="agregarPalabra">Agregar Palabra</string>
    <string name="escribePalabra">Escribe una palabra</string>
    <string name="guardarPalabra">Guardar Palabra</string>
    <string name="palabras">PALABRAS</string>
    <string name="palabra">Palabra</string>
    <string name="traduccion">Traduccion</string>
    <string name="nuevaFrase">Nueva Frase</string>
    <string name="verLista">Ver lista</string>
    <string name="play">Play</string>
    <string name="noMicrophone">Sin microfono</string>
    <string name="noApp">Sin aplicacion</string>
    <string name="errorEnviando">Error en envio de frase</string>

</resources>
