<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.viajelp.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"/>
    <EditText
        android:id="@+id/etNombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"/>
    <EditText
        android:id="@+id/etUsuarioRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edad"/>
    <EditText
        android:id="@+id/etEdadRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        />
    <EditText
        android:id="@+id/etPasswordRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repetirPassword"
        />
    <EditText
        android:id="@+id/etPasswordRegistroBis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnEntrarRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/queEmpieceElViaje"
        android:onClick="clickButtonRegistro"/>


</LinearLayout>
