<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eus.ehu.tta.viajelp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSaludoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hola"/>

        <Button
            android:id="@+id/btnSituaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/situaciones"
            android:onClick="clickSituaciones"/>

        <Button
            android:id="@+id/btnAprendeme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aprendeme"
            android:onClick="clickAprendeme"/>

        <Button
            android:id="@+id/btnForo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foro"
            android:onClick="clickForo"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
